# clipkitty-sparkle-test

./: .gitignore  .swiftlint.yml  AppIcon.icns  CLAUDE.md  LICENSE-APPSTORE.md  Makefile  Package.resolved  Project.swift  README.md  SyntheticData.sqlite  THIRD_PARTY_NOTICES.md  Tuist.swift  appcast.xml  flake.nix  index.html
.github/workflows/: build.yml
AppIcon.icon/: icon.json
Scripts/: install-hooks.sh  run-in-nix.sh
Sources/App/: AppDelegate.swift  ClipKitty.oss.entitlements  ClipKittyApp.swift  ClipboardStore.swift  ContentView.swift  FloatingPanelController.swift  FontManager.swift  HotKeyManager.swift  ImageDescriptionGenerator.swift  LaunchAtLogin.swift  LinkMetadataFetcher.swift  PrivacySettingsView.swift  Settings.swift  SettingsView.swift  ToastView.swift  ToastWindow.swift  UpdateController.swift
Sources/ClipKittyRust/: ClipKittyRustFFI.c
Sources/ClipKittyRustWrapper/: ClipKittyRust.swift
Tests/UITests/: ClipKittyUITests.swift
Tests/UnitTests/: HighlightRangeTests.swift  MultiFileTests.swift
Tuist/: Package.resolved  Package.swift
distribution/: Makefile  SyntheticData.sqlite  build-dmg.sh  create-dmg-background.swift  create-retina-display.m  generate-appcast.sh  generate-landing-page.sh  get-age-key.sh  image_keywords.csv  inject-images.py  install-deps.sh  patch-demo-items.sh  prepare-screenshot-environment.sh  publish.py  record-preview-video.sh  rotate-sparkle-key.sh  setup-dev-signing.sh  setup-signing.sh
distribution/data-gen/: taxonomy.json
distribution/images/: illustration_volcano_landscape_5a7d9992.heic  landscape_arctic_mountains_8883fec2.heic  manifest.json  painting_field_meadow_b6f242ec.heic  painting_impressionist_pointillism_c6161cb8.heic  painting_miniature_mughal_0c2521b3.heic  painting_monet_train_station_56a53c2c.heic  painting_pointillism_sunset_031969f0.heic  painting_woman_portrait_e2344ed6.heic  photograph_road_trees_ed1b91cd.heic  photograph_whale_building_5558248b.heic  print_engraving_crowd_7484447d.heic  (+2 more)
distribution/rust-data-gen/: Cargo.toml
distribution/rust-data-gen/src/: demo_data.rs  demo_data_localized.rs  main.rs
purr/: Cargo.toml
purr/benches/: search_benchmark.rs
purr/scripts/: generate-bindings.sh
purr/src/: candidate.rs  content_detection.rs  database.rs  indexer.rs  interface.rs  lib.rs  models.rs  ranking.rs  search.rs  store.rs
purr/tests/: long_content_highlight_test.rs  preview_video_search.rs  snippet_tests.rs  test_data.rs
secrets/: ADMIN_TOKEN.age  MACOS_P12_BASE64.age  MACOS_P12_PASSWORD.age  MACOS_TEAM_ID.age  NOTARY_ISSUER_ID.age  NOTARY_KEY_BASE64.age  NOTARY_KEY_ID.age  SPARKLE_EDDSA_KEY.age
(+70 files in other folders)
